# Final-year-project

./: .gitignore  QUICK_START.md  SETUP_GUIDE.md  START_BACKEND.bat  START_FRONTEND.bat  ai_screen.dart  llm_client.py  main.py  populate_db.py  reconstruction_screen.dart  structured_queries.py  test_structured_queries.py
backend/: index.html  parse.py  pyproject.toml
backend/app/: infer.py  llm_client.py  main.py  requirements.txt  test.py
backend/app/chroma_storage/: chroma.sqlite3
backend/app/chroma_storage_corrupt_20260511_142040/: chroma.sqlite3
backend/app/chroma_storage_corrupt_20260514_144441/: chroma.sqlite3
flutterapp/: pubspec.yaml
